--- a/tienditaColegial/app/CSS/styles.css
+++ b/tienditaColegial/app/CSS/styles.css
@@ -4,11 +4,11 @@
 	padding: 0px;
 }
 
-header, nav{
+.head, nav{
 	display: block;
 }
 
-body{
+.main-body{
 	margin: 0 auto;
 	width: 95%;
 	font: 12px/18px Arial, Helvetica, sans-serif;
@@ -30,7 +30,7 @@ h1{
 	text-transform: uppercase;
 }
 
-#head{
+.head{
 	height: 70px;
 	padding: 45px 0px 0px 5px;
 }
@@ -100,3 +100,4 @@ nav ul li{
 	cursor: pointer;
 }
 
+Contact GitHub API Training Shop Blog About
