--- a/tienditaColegial/app/CSS/styles.css
+++ b/tienditaColegial/app/CSS/styles.css
@@ -7,6 +7,7 @@
 .head, nav{
     display: block;
 }
+
 a {
 color: red;
 }
@@ -29,8 +30,9 @@ color: red;
     text-shadow: 1px 1px, 2px 2px #ccc, 3px 3px 1px #777;}
 
 h1{
+
     font: 48px/38px Arial, Helvetica, sans-serif;
-    color: #3d6b09;
+    color: green;
     text-transform: uppercase;
 }
 
@@ -42,6 +44,7 @@ h1{
 
 .link_box{
     float: right;
+    link-color: green;
 }
 /*navigation*/
 
@@ -63,6 +66,7 @@ nav ul{
 
 nav ul li{
     float: left;
+
 }
 
 nav ul li {
@@ -74,6 +78,11 @@ nav ul li {
     text-decoration: none;
     line-height: 49px;
     padding: 0px 10px 0px 10px;
+
+}
+
+.footer-nav{
+background: green;
 
 }
 
@@ -107,7 +116,7 @@ nav ul li {
 .page-content{
 
 heigth: 50;
-padding: 45;
+padding: 65;
 }
 
 
