Arregle el Home Banner Position y Routing

--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -97,5 +97,10 @@ color: white;
   margin: 0px auto;}
   }
 
+  img.home-image {
+  display: block;
+  margin: 0px auto;}
+  }
+
 
 /*  This is my custome CSS end */
