--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -10,4 +10,9 @@ padding: 10px;
 .headerInfomd-toolbar md-icon.md-default-theme {
   background-color: green; }
 
+  img.home-image {
+  display: block;
+  margin: 0px auto;}
+  }
+
 
