Arregle el Home Banner Position y Routing

--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -83,6 +83,11 @@ color: white;
 .headerInfomd-toolbar md-icon.md-default-theme {
   background-color: green; }
 
+  img.home-image {
+  display: block;
+  margin: 0px auto;}
+  }
+
 
 
 /*  This is my custome CSS end */
