Arregle el Home Banner Position y Routing

--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -75,6 +75,11 @@ border-radius: 15px;
 .headerInfomd-toolbar md-icon.md-default-theme {
   background-color: green; }
 
+  img.home-image {
+  display: block;
+  margin: 0px auto;}
+  }
+
 
 
 
