--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -51,5 +51,10 @@ color: white;
 text-shadow: 1px 1px, 1px 1px #ccc, 2px 2px 1px #777;}
 }
 
+  img.home-image {
+  display: block;
+  margin: 0px auto;}
+  }
+
 
 /*  This is my custome CSS end */
