movi el Css de Bower components to App.Css

--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -4,8 +4,51 @@
 
 h1 {
 padding: 10px;
+}
 
+/* This is the Custom CSS i Madee */
+
+footer {
+background: #2E7D32;
+bottom: 0;
+width: 100%;
+color: white;
+float: left;
+}
+
+/*Footer Css */
+.footer-first-menu, .informacion, .footer-account, .footer-logo {
+  color: white;
+  width: 275px;
+  float: left;
+  margin: 10px;}
+
+  .footer-logo
+  {
+  border-style: solid;
+  border-radius: 10px;
+  }
+
+
+a {
+color: white;
+}
+
+img.home-image{
+display: block;
+margin: 0px auto;
+}
+
+.md-toolbar-tools{
+font-size: 32px;
+background: #2E7D32;
+font-weight: bold;
+text-transform: uppercase;
+text-decoration: none;
+color: white;
+text-shadow: 1px 1px, 1px 1px #ccc, 2px 2px 1px #777;}
 }
 
 
+/*  This is my custome CSS end */
 
