--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -1,4 +1,4 @@
-.main-body {
+main-body {
   padding: 30px;
 }
 
@@ -53,4 +53,3 @@ text-shadow: 1px 1px, 1px 1px #ccc, 2px 2px 1px #777;}
 
 
 /*  This is my custome CSS end */
-
