--- a/tienditaColegial/app/app.css
+++ b/tienditaColegial/app/app.css
@@ -44,11 +44,21 @@ border-color: #2E7D32;
 border-radius: 15px;
 }
 
+/*     Ropa Cssss */
+.ropaPage {
+width: 1130px;
+margin: 8px auto;
+min-height: 600px;
+}
 
-
-
-
-
+img.camisas-image, img.pantalones-image, img.gorras-image{
+display: inline;
+margin:6px;
+border-width: 4px;
+border-style: solid;
+border-color: #2E7D32;
+border-radius: 15px;
+}
 
 /*Footer Css */
 
