--- a/app/server/client/views/articles.template.html
+++ b/app/server/client/views/articles.template.html
@@ -9,10 +9,10 @@
 
         <div layout="row" layout-wrap ng-controller="articlesController">
             <div flex="30"  ng-repeat="article in articles">
-            <img class ="itemImage" src="{{article.imageUrl}}" height="262 " length = 300>
-                <p>{{article.name}}</p>
+            <img class ="itemImage" src="{{article.itemimage}}" height="262 " length = 300>
+                <p>{{article.itemname}}</p>
             <p>${{article.price}}</p>
-            <ngcart-addtocart id="{{article.id}}" name="{{article.name}}" price="{{article.price}}" quantity="1" quantity-max="5">
+            <ngcart-addtocart id="{{article.itemid}}" name="{{article.itemname}}" price="{{article.price}}" quantity="1" quantity-max="5">
                 Add to Cart
             </ngcart-addtocart>
                 <br><br>
