--- a/app/server/client/views/gorras.template.html
+++ b/app/server/client/views/gorras.template.html
@@ -8,10 +8,10 @@
 
         <div layout="row" layout-wrap ng-controller="gorrasController">
             <div flex="30" ng-repeat="gorra in gorras">
-                <img class ="itemImage" src="{{gorra.imageUrl}}" height="262" length = 200>
-                <p>{{gorra.name}}</p>
+                <img class ="itemImage" src="{{gorra.itemimage}}" height="262" length = 200>
+                <p>{{gorra.itemname}}</p>
                 <p>${{gorra.price}}</p>
-                <ngcart-addtocart id="{{gorra.id}}" name="{{gorra.name}}" price="{{gorra.price}}" quantity="1" quantity-max="5">
+                <ngcart-addtocart id="{{gorra.itemid}}" name="{{gorra.itemname}}" price="{{gorra.price}}" quantity="1" quantity-max="5">
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
