--- a/app/server/client/views/header.template.html
+++ b/app/server/client/views/header.template.html
@@ -3,7 +3,7 @@
     <div class="md-toolbar-tools" ng-controller="headerCtrl">
       <img src = "images/Banners/Bulldog-paw.jpg" height="40" length = "40"/>
       <h1>
-        <span>LIBRERIA COLEGIAL</span>
+        <span>TIENDITA COLEGIAL</span>
       </h1>
       <span flex=""></span>
 
