--- a/app/server/client/views/books.template.html
+++ b/app/server/client/views/books.template.html
@@ -9,7 +9,7 @@
 
         <div layout="row" layout-wrap  ng-controller="booksController">
             <div flex="30" ng-repeat="book in books">
-                <img class ="booksImage" src="{{book.itemimage}}" height="252 " length = 290>
+                <img class ="booksImage" ng-src="{{book.imageurl}}" height="252 " length = 290>
                 <p> {{book.itemname}} </p>
                 <p>${{book.price}}</p>
                 <ngcart-addtocart id="{{book.itemid}}" name="{{book.itemname}}" price="{{book.price}}" quantity="1"                     quantity-max="5">
