--- a/app/server/client/views/footer-nav.template.html
+++ b/app/server/client/views/footer-nav.template.html
@@ -1,18 +1,11 @@
-<div >
-        <div ng-cloak="" class="navBar" >
+</div>
+<md-content class = "copyright" layout-gt-sm="row" layout-align = "center" flex-offset="3">
+    <div flex = 94>
+        <h3>Copyright 2016 La Tiendita Colegial </h3>
+    </div>
+</md-content>
+</div>
 
-            <md-content class="navPadding">
-                <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-                    <md-nav-item md-nav-href= "#!/home-page" name="home-page">Inicio </md-nav-item>
-                    <md-nav-item md-nav-href= "#!/books" name="libros">Libros</md-nav-item>
-                    <md-nav-item md-nav-href= "#!/ropa" name="ropa">Ropa</md-nav-item>
-                    <md-nav-item md-nav-href= "#!/articles" name="articles">Articulos Escolares</md-nav-item>
-                    <md-nav-item md-nav-href= "#!/contact" name="contact">Contactos</md-nav-item>
-
-                </md-nav-bar>
-            </md-content>
-
-        </div>
         <div class = "footer-background" flex = "100">
         <md-content class="footer2" layout-gt-sm="row" flex-offset="5">
 
@@ -42,14 +35,7 @@
             <img src = "images/Huella-footer.jpg" height="150" length = "150"/>
                 </div>
         </md-content>
-
-</div>
-    <md-content class = "copyright" layout-gt-sm="row" layout-align = "center"flex-offset="3">
-        <div flex = 94>
-            <h3>Copyright 2016 Cristian melendez </h3>
-        </div>
-    </md-content>
-</div>
+            </div>
 
 
 
