--- a/app/server/client/views/new-arrivals.template.html
+++ b/app/server/client/views/new-arrivals.template.html
@@ -9,10 +9,10 @@
 
     <div layout="row" layout-wrap  ng-controller="newArrivalsController">
         <div flex="30" ng-repeat="newArrival in newArrivals">
-            <img class ="itemImage" src="{{newArrival.imageUrl}}" height="262 " length = 300>
-            <p> {{newArrival.name}}</p>
+            <img class ="itemImage" src="{{newArrival.imageurl}}" height="262 " length = 300>
+            <p> {{newArrival.itemname}}</p>
             <p>${{newArrival.price}}</p>
-            <ngcart-addtocart id="{{newArrival.id}}" name="{{newArrival.name}}" price="{{newArrival.price}}" quantity="1" quantity-max="5">
+            <ngcart-addtocart id="{{newArrival.itemid}}" name="{{newArrival.itemname}}" price="{{newArrival.price}}" quantity="1" quantity-max="5">
                 Add to Cart
             </ngcart-addtocart>
             <br><br>
