--- a/app/server/client/views/top-sellers.template.html
+++ b/app/server/client/views/top-sellers.template.html
@@ -1,18 +1,14 @@
 <md-content flex-offset="5" >
     <h2>Mas vendidos <span><hr></span></h2>
 
-
-
     <br><br><br>
-
-
 
     <div layout="row" layout-wrap  ng-controller="topSellersController">
         <div flex="30" ng-repeat="topSeller in topSellers">
-            <img class ="itemImage" src="{{topSeller.imageUrl}}" height="262 " length = 300>
-            <p> {{topSeller.name}} </p>
+            <img class ="itemImage" src="{{topSeller.imageurl}}" height="262 " length = 300>
+            <p> {{topSeller.itemname}} </p>
             <p>${{topSeller.price}}</p>
-            <ngcart-addtocart id="{{topSeller.id}}" name="{{topSeller.name}}" price="{{topSeller.price}}" quantity="1" quantity-max="5">
+            <ngcart-addtocart id="{{topSeller.itemid}}" name="{{topSeller.itemname}}" price="{{topSeller.price}}" quantity="1" quantity-max="5">
                 Add to Cart
             </ngcart-addtocart>
             <br><br>
