--- a/app/server/client/views/account-info.template.html
+++ b/app/server/client/views/account-info.template.html
@@ -8,7 +8,7 @@
       <md-list-item>
         <div>
           <p><b>Nombre:</b></p>
-          <p>{{name}}</p>
+          <p>{{firstname}}</p>
           <md-input-container ng-hide="true"> <label>Nuevo Nombre</label> <input type="text" id="name2Change" ng-model="name2Change"></md-input-container>
         </div>
         <md-button class="md-primary md-secondary md-raised" ng-click="editInfo()" ng-hide="pressed">Editar</md-button>
