--- a/app/server/client/views/header.template.html
+++ b/app/server/client/views/header.template.html
@@ -7,7 +7,7 @@
       </h1>
       <span flex=""></span>
 
-      <md-button class="NavButton" ng-hide="!hideMe" ng-click="logout()"> Cerrar Sesion</md-button>
+      <md-button class="NavButton" ng-hide="hideMe" ng-click="logout()"> Cerrar Sesion</md-button>
       <md-button class="NavButton" ng-click="toAccount()" style = "..." >{{message}}</md-button>
       <md-button class="NavButton" href = "#!/cart" aria-label="cart"> Carrito
         <img class="png-icon" src="images/shopping-cart-white.png" style="width: 20px; height: 16px;">  </md-button>
