(Se anadio el Update Inventory

--- a/app/server/client/views/header.template.html
+++ b/app/server/client/views/header.template.html
@@ -6,7 +6,7 @@
         <span>TIENDITA COLEGIAL</span>
       </h1>
       <span flex=""></span>
-
+      <md-button class="NavButton" href = "#!/update-inventory" aria-label="Update inventory"> Agregar articulo</md-button>
       <md-button class="NavButton" ng-hide="hideMe" ng-click="logout()"> Cerrar Sesion</md-button>
       <md-button class="NavButton" ng-click="toAccount()" style = "..." >{{message}}</md-button>
       <md-button class="NavButton" href = "#!/cart" aria-label="cart"> Carrito
