--- a/app/server/client/views/update-inventory.template.html
+++ b/app/server/client/views/update-inventory.template.html
@@ -1,26 +1,21 @@
 <div ng-controller="inventoryCtrl">
 
-<md-content layout="column" layout-padding="50px">
 
-<h2> Agregar articulo al inventario </h2>
-
-    <form action="/" id="updateInventory">
-        <div layout="column" layout-sm="column" layout-margin="300px">
-
+        <md-content layout="column" flex = "80" layout-align = "center" flex-offset="10">
+            <h2> Agregar articulo al inventario </h2>
             <md-input-container >
                 <label>Nombre del articulo</label>
-                <input type="text" id="articleName " ng-model="articleName">
+                <input type="text"  ng-model="articleName">
             </md-input-container>
-
-
 
             <md-input-container>
 
-                <md-select ng-model="selectedItemType" placeholder="Select the type of item"
-                           ng-options="x for x in names">
 
-
+                <md-select ng-model="selectedType" placeholder="Select the type of item" >
+                    <md-option ng-value="itemType" ng-repeat="itemType in itemTypes">{{itemType}}</md-option>
                 </md-select>
+
+
             </md-input-container>
 
             <md-input-container >
@@ -32,10 +27,13 @@
                 <label> Precio del articulo </label>
                 <input type="text" id="articleName " ng-model="articlePrice">
             </md-input-container>
+            <input class="ng-hide" id="input-file-id" multiple type="file" />
+            <label for="input-file-id" class="md-button md-raised">Seleccione una imagen</label>
 
-        </div>
-        </form>
-    </md-content>
+            <md-button class="md-raised md-primary" ng-click="addItem(articleName, selectedType, descripcion,               articlePrice)"> Agregar articulo </md-button>
+            <div flex-offset="10"></div>
+            </md-content>
 </div>
+
 
 
