This shit better work

--- a/app/server/client/views/home-page.template.html
+++ b/app/server/client/views/home-page.template.html
@@ -1,4 +1,4 @@
-
+<div ng-controller="homePageCtrl">
 <md-content layout-gt-sm="row" flex-offset="3" layout-align = "center">
 
 <div class = "home-page" flex = "94">
@@ -41,7 +41,7 @@
 
 </md-content>
 
-<p ng-controller="homePageController"></p>
 </md-content>
 
 
+</div>
