--- a/app/server/client/views/itemDetail.template.html
+++ b/app/server/client/views/itemDetail.template.html
@@ -1,3 +1,5 @@
-<div ng-controller="itemDetailCtrl">
+<div class = "itemDetail" ng-controller="itemDetailCtrl">
 
+
+    <h1> Item Detail </h1>
 </div>
