--- a/app/server/client/views/account-info.template.html
+++ b/app/server/client/views/account-info.template.html
@@ -12,7 +12,7 @@
           <md-input-container ng-hide="true"> <label>Nuevo Nombre</label> <input type="text" id="name2Change" ng-model="name2Change"></md-input-container>
         </div>
         <md-button class="md-primary md-secondary md-raised" ng-click="editInfo()" ng-hide="pressed">Editar</md-button>
-        <md-button class="md-primary md-secondary md-raised md-warn" ng-hide="">Guardar Cambios</md-button>
+        <!-- <md-button class="md-primary md-secondary md-raised md-warn" ng-hide="">Guardar Cambios</md-button> -->
         <md-divider ng-if="!$last"></md-divider>
 
       </md-list-item>
@@ -64,5 +64,3 @@
       </md-list-item>
     </md-list>
   </md-content>
-
-
