--- a/app/server/client/views/books.template.html
+++ b/app/server/client/views/books.template.html
@@ -7,9 +7,9 @@
 
     <div>
 
-        <div layout="row" layout-wrap  ng-controller="booksController">
+        <div layout="row" layout-wrap  ng-controller="booksCtrl">
             <div flex="33" ng-repeat="book in books">
-                <img class ="booksImage" ng-src="{{book.imageurl}}" height="252 " length = 290 ng-click="getBookDetails($event)">
+                <img class ="booksImage" ng-src="{{book.imageurl}}" height="252 " length = 290 ng-click="getBookDetails($event,book)">
                 <p ng-click="getBookDetails($event)"> {{book.itemname}} </p>
                 <p>${{book.price}}</p>
                 <ngcart-addtocart id="{{book.itemid}}" name="{{book.itemname}}" price="{{book.price}}" quantity="1" quantity-max="5">
