--- a/app/server/client/views/gorras.template.html
+++ b/app/server/client/views/gorras.template.html
@@ -8,7 +8,7 @@
 
         <div layout="row" layout-wrap ng-controller="gorrasController">
             <div flex="30" ng-repeat="gorra in gorras">
-                <img class ="itemImage" src="{{gorra.imageurl}}" height="262" length = 200>
+                <img class ="itemImage" src="{{gorra.imageurl}}" height="262" length = 200 ng-click="getHatDetails($event,gorra)">
                 <p>{{gorra.itemname}}</p>
                 <p>${{gorra.price}}</p>
                 <ngcart-addtocart id="{{gorra.itemid}}" name="{{gorra.itemname}}" price="{{gorra.price}}" quantity="1" quantity-max="5">
