Se modifico el item Details

--- a/tienditacolegial/app/server/client/views/itemDetail.template.html
+++ b/tienditacolegial/app/server/client/views/itemDetail.template.html
@@ -1,11 +1,18 @@
+
 <md-dialog class="itemDetail" aria-label>
   <form ng-cloak>
-    <md-toolbar></md-toolbar>
 
+
+    <md-toolbar>
+        <div  layout="row"  layout-align="center"> <h1>Tiendita Colegial</h1> </div>
+    </md-toolbar>
+     <br> <br>
+
+      <div>
     <md-dialog-content>
-      <div layout layout="row" ng-controller="itemDetailCtrl">
+      <div layout layout="row" ng-controller="itemDetailCtrl" flex-offset="5">
           <div flex="50" flex-xs>
-            <img ng-src="{{currentItem.imageurl}}" height="500 " length = 450>
+            <img ng-src="{{currentItem.imageurl}}" height="300" length = "300">
           </div>
           <div layout="column" flex-offset="5" flex="40">
 
@@ -13,10 +20,36 @@
             <h3>{{currentItem.description}}</h3>
             <h3>${{currentItem.price}}</h3>
 
-
+              <ngcart-addtocart id="{currentItem.itemid}}" name="{{currentItem.itemname}}"                              price="{{currentItem.price}}" quantity="1" quantity-max="5">
+                  Add to Cart
+              </ngcart-addtocart>
           </div>
 
       </div>
     </md-dialog-content>
+    <br><br>
+
+
+<script type="text/ng-template" id="template/ngCart/addtocart.html">
+    <div ng-hide="attrs.id">
+        <a class="btn btn-lg btn-primary" ng-disabled="true" ng-transclude></a>
+    </div>
+    <div ng-show="attrs.id">
+        <div>
+    <span ng-show="quantityMax">
+      <select name="quantity" id="quantity" ng-model="q" ng-options=" v for v in qtyOpt"></select>
+    </span>
+            <md-button class="md-primary md-raised">
+                <a style="color: #0f0f0f;" ng-click="ngCart.addItem(id, name, price, q, data)" ng-transclude></a>
+            </md-button>
+        </div>
+        <span ng-show="inCart()">
+
+  <p class="alert alert-info">This item is in your cart. <a ng-click="ngCart.removeItemById(id)" style="cursor: pointer; color: orange">Remove</a></p>
+  </span>
+    </div>
+</script>
+
+
   </form>
 </md-dialog>
