--- a/tienditacolegial/app/server/client/views/books.template.html
+++ b/tienditacolegial/app/server/client/views/books.template.html
@@ -9,10 +9,12 @@
 
         <div layout="row" layout-wrap  ng-controller="booksCtrl">
             <div flex="33" ng-repeat="book in books">
-                <img class ="booksImage" ng-src="{{book.imageurl}}" height="252 " length = 290 ng-click="getBookDetails($event,book)">
+                <img class ="booksImage" ng-src="{{book.imageurl}}" imageUrl = "{{book.imageurl}}" height="252 " length = 290 ng-click="getBookDetails($event,book)">
                 <p ng-click="getBookDetails($event)"> {{book.itemname}} </p>
                 <p>${{book.price}}</p>
-                <ngcart-addtocart id="{{book.itemid}}" name="{{book.itemname}}" price="{{book.price}}" quantity="1" quantity-max="5">
+
+                <ngcart-addtocart id="{{book.itemid}}" name="{{book.itemname}}"
+                                  price="{{book.price}}" quantity="1" quantity-max="5"  >
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
