foto de articulo en carrito

--- a/tienditacolegial/app/server/client/views/books.template.html
+++ b/tienditacolegial/app/server/client/views/books.template.html
@@ -14,7 +14,7 @@
                 <p>${{book.price}}</p>
 
                 <ngcart-addtocart id="{{book.itemid}}" name="{{book.itemname}}"
-                                  price="{{book.price}}" quantity="1" quantity-max="5"  >
+                                  data="book" price="{{book.price}}" quantity="1" quantity-max="5"  >
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
