--- a/tienditacolegial/app/server/client/views/top-sellers.template.html
+++ b/tienditacolegial/app/server/client/views/top-sellers.template.html
@@ -8,7 +8,8 @@
             <img class ="itemImage" src="{{topSeller.imageurl}}" height="262 " length = 200 ng-click="getTopSellerDetails($event,topSeller)">
             <p> {{topSeller.itemname}} </p>
             <p>${{topSeller.price}}</p>
-            <ngcart-addtocart id="{{topSeller.itemid}}" name="{{topSeller.itemname}}" price="{{topSeller.price}}" quantity="1" quantity-max="5">
+            <ngcart-addtocart id="{{topSeller.itemid}}" name="{{topSeller.itemname}}" price="{{topSeller.price}}"
+                              data="topSeller" quantity="1" quantity-max="5">
                 Add to Cart
             </ngcart-addtocart>
             <br><br>
