--- a/tienditacolegial/app/server/client/views/articles.template.html
+++ b/tienditacolegial/app/server/client/views/articles.template.html
@@ -12,7 +12,8 @@
             <img class ="itemImage" src="{{article.imageurl}}" height="262 " length = 300 ng-click="getArticleDetails($event,article)">
                 <p>{{article.itemname}}</p>
             <p>${{article.price}}</p>
-            <ngcart-addtocart id="{{article.itemid}}" name="{{article.itemname}}" price="{{article.price}}" quantity="1" quantity-max="5">
+            <ngcart-addtocart id="{{article.itemid}}" name="{{article.itemname}}" price="{{article.price}}"
+                              data="article" quantity="1" quantity-max="5">
                 Add to Cart
             </ngcart-addtocart>
                 <br><br>
