--- a/tienditacolegial/app/server/client/views/pantalones.template.html
+++ b/tienditacolegial/app/server/client/views/pantalones.template.html
@@ -12,7 +12,8 @@
                 <img class ="itemImage" src="{{pant.imageurl}}" height="262" length = 200 ng-click="getPantDetails($event,pant)">
                 <p>{{pant.itemname}}</p>
                 <p>${{pant.price}}</p>
-                <ngcart-addtocart id="{{pant.itemid}}" name="{{pant.itemname}}" price="{{pant.price}}" quantity="1" quantity-max="5">
+                <ngcart-addtocart id="{{pant.itemid}}" name="{{pant.itemname}}" price="{{pant.price}}"
+                                  data="pant" quantity="1" quantity-max="5">
                     Add to Cart
                 </ngcart-addtocart>
                 <br><br>
